move sonar properties out of itCoverage profile as jenkins run sonar without profiles