@@ -13,6 +13,10 @@
 		<relativePath>../</relativePath>
 	</parent>
 
+	<properties>
+		<cargo.jvm.args>-XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/</cargo.jvm.args>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
@@ -106,7 +110,7 @@
 						<properties>
 							<cargo.servlet.port>34567</cargo.servlet.port>
 							<cargo.logging>low</cargo.logging>
-							<cargo.jvmargs>-XX:PermSize=512m -XX:MaxPermSize=1024m -Duser.timezone="GMT" -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/</cargo.jvmargs>
+							<cargo.jvmargs>${cargo.jvm.args}</cargo.jvmargs>
 						</properties>
 						<deployables>
 							<deployable>
@@ -146,8 +150,7 @@
 		<profile>
 			<id>itCoverage</id>
 			<properties>
-				<jacoco.file.path>/tmp/hcsJacoco.out</jacoco.file.path>
-				<sonar.jacoco.itReportPath>${jacoco.file.path}</sonar.jacoco.itReportPath>
+				<jacoco.args>-javaagent:"${jacoco.agent.path}=destfile=${jacoco.file.path}"</jacoco.args>
 			</properties>
 			<dependencies>
 				<dependency>
@@ -188,7 +191,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<configuration>
-							<argLine>-javaagent:"${jacoco.agent.path}=destfile=${jacoco.file.path}"</argLine>
+							<argLine>${jacoco.args}</argLine>
 						</configuration>
 					</plugin>
 					<plugin>
@@ -197,7 +200,7 @@
 						<configuration>
 							<configuration>
 								<properties>
-									<cargo.jvmargs>-javaagent:"${jacoco.agent.path}=destfile=${jacoco.file.path}"</cargo.jvmargs>
+									<cargo.jvmargs>${jacoco.args} ${cargo.jvm.args}</cargo.jvmargs>
 								</properties>
 							</configuration>
 						</configuration>
